--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,14 @@ process {
 
   cpus = 1
   clusterOptions = "-l h_vmem=4G -l h_rt=1:00:00"
+
+  withName: extract_fastq {
+    clusterOptions = "-l h_vmem=8G -pe sharedmem 1 -l h_rt=1:00:00"
+  }
+
+  withName: genotype {
+    clusterOptions = "-l h_vmem=4G -pe sharedmem 8 -l h_rt=2:00:00"
+  }
 }
 
 params {
