--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ params {
   help = false
   input = '*.bam'
   outdir = 'output'
+  name = 'batch'
 }
 
 executor = "sge"
@@ -32,7 +33,11 @@ process {
   }
 
   withName: genotype {
-    clusterOptions = "-l h_vmem=4G -pe sharedmem 8 -l h_rt=2:00:00"
+    clusterOptions = "-l h_vmem=8G -pe sharedmem 4 -l h_rt=2:00:00"
+  }
+
+  withName: merge {
+    clusterOptions = "-l h_vmem=4G -pe sharedmem 1 -l h_rt=1:00:00"
   }
 }
 
