Fixed process name in config

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,7 +28,7 @@ process {
   cpus = 1
   clusterOptions = "-l h_vmem=4G -l h_rt=1:00:00"
 
-  withName: extract_fastq {
+  withName: extract_reads {
     clusterOptions = "-l h_vmem=8G -pe sharedmem 1 -l h_rt=1:00:00"
   }
 
